--- a/etc/wpa_supplicant/wpa_supplicant.conf
+++ b/etc/wpa_supplicant/wpa_supplicant.conf
@@ -2,8 +2,7 @@ ctrl_interface=DIR=/var/run/wpa_supplicant GROUP=netdev
 update_config=1
 country=US
 
-# OPEN networks - High priority
+# OPEN networks
 network={
 	key_mgmt=NONE
-	priority=100
 }
